# deck-app

./: .editorconfig  Cargo.toml  config.json  package.json
deck-app-plugin-sdk/: Cargo.toml
deck-app-plugin-sdk/src/: action.rs  lib.rs  plugin.rs
deck-app-plugins/com.amenophis.deckapp.sample/: package-lock.json  package.json
deck-app-plugins/com.amenophis.deckapp.sample/src/: index.d.ts  index.js
deck-app-plugins/core-plugin/: Cargo.toml
deck-app-plugins/core-plugin/src/: lib.rs
deck-app-plugins/keyboard-plugin/: Cargo.toml
deck-app-plugins/keyboard-plugin/src/: lib.rs
deck-app-plugins/obs-plugin/: Cargo.toml
deck-app-plugins/obs-plugin/src/: change_scene.rs  lib.rs
deck-app-server/: Cargo.toml
deck-app-server/src/: commands.rs  config.rs  device.rs  display.rs  lib.rs  server.rs
deck-app-server/src/server/: config.rs  plugin.rs
deck-app-ui/: package.json  pnpm-lock.yaml  tsconfig.node.json
deck-app-ui/src/: App.tsx  main.tsx
deck-app-ui/src-tauri/: Cargo.toml
deck-app-ui/src-tauri/src/: main.rs
deck-app-ui/src/api/: api.ts
plugins/com.amenophis.deckapp.sample/: esbuild.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  device.rs  main.rs  server.rs
src-tauri/src/server/: config.rs  plugin.rs
