[package]
name = "deck-app-server"
version = "0.1.0"
description = "Streamdeck app for controlling OBS and other things"
authors = ["Jérémy Leherpeur <amenophis@leherpeur.net>"]
license = ""
repository = ""
edition = "2021"

[dependencies]
streamdeck = { version = "0.8.0", features = ["default"] }
hidapi = "2.5.1"
tokio = { version = "1.35.1", features = ["full"] }
eyre = "0.6.12"
log = "0.4.20"
env_logger = "0.11.1"
extism = "1.0.3"
crossbeam = "0.8.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"