[package]
name = "deck-app-server"
version = "0.1.0"
description = "Streamdeck app for controlling OBS and other things"
authors = ["Jérémy Leherpeur <amenophis@leherpeur.net>"]
license = ""
repository = ""
edition = "2021"

[dependencies]
streamdeck = { version = "0.8.0", features = ["default"] }
hidapi = "2.5.1"
log = "0.4.20"
crossbeam = "0.8.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

# Plugin SDK
deck-app-plugin-sdk = { path = "../deck-app-plugin-sdk" }

# Plugins
core-plugin = { path = "../deck-app-plugins/core-plugin" }
keyboard-plugin = { path = "../deck-app-plugins/keyboard-plugin" }
rusttype = "0.9.3"
#obs-plugin = { path = "../deck-app-plugins/obs-plugin" }
