[package]
name = "deck-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.101"
streamdeck = { git = "https://github.com/amenophis/ryankurte-rust-streamdeck.git", branch = "update-hidapi", features = ["default"] }
hidapi = "2.4"
tokio = { version = "1.35.1", features = ["full"] }
eyre = "0.6.11"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
