[package]
name = "core-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deck-app-plugin-sdk = { path = "../../deck-app-plugin-sdk"}
lazy_static = "1.4.0"
log = { version = "0.4.20", features = [] }
once_cell = "1.19.0"
