[package]
name = "keyboard-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deck-app-plugin-sdk = { path = "../../deck-app-plugin-sdk"}
enigo = "0.1.3"
libxdo = "0.6.0"
log = { version = "0.4.20", features = [] }
lazy_static = "1.4.0"
