[package]
name = "deck-app-ui"
version = "0.1.0"
description = "Streamdeck app for controlling OBS and other things"
authors = ["Jérémy Leherpeur <amenophis@leherpeur.net>"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
deck-app-server = { path = "../../deck-app-server" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

